# OnboardYou

./: .gitignore  Cargo.toml  Makefile  README.md  brief.md  openapi.json  plan.md  task.md  test.csv
ETL/: Cargo.toml  README.md
ETL/src/: lib.rs
ETL/src/capabilities/egress/: api_dispatcher.rs  mod.rs  observability.rs
ETL/src/capabilities/egress/engine/: api_engine.rs  mod.rs
ETL/src/capabilities/egress/models/: api_dispatcher_config.rs  auth_type.rs  bearer_config.rs  dispatch_response.rs  mod.rs  oauth2_config.rs  oauth_config.rs  retry_policy.rs
ETL/src/capabilities/egress/repositories/: bearer_repo.rs  oauth2_repo.rs  oauth_repo.rs
ETL/src/capabilities/egress/traits/: mod.rs
ETL/src/capabilities/ingestion/engine/: csv_hris_connector.rs  workday_hris_connector.rs
ETL/src/capabilities/ingestion/traits/: hris_connector.rs
ETL/src/capabilities/logic/: mod.rs
ETL/src/capabilities/logic/engine/: cellphone_sanitizer.rs  drop_column.rs  filter_by_value.rs  handle_diacritics.rs  identity_deduplicator.rs  identity_fuzzy_match.rs  iso_country_sanitizer.rs  masking.rs  mod.rs  regex_replace.rs  rename_column.rs  scd_type_2.rs
ETL/src/capabilities/logic/models/: cellphone_sanitizer_config.rs  dedup_config.rs  drop_config.rs  filter_by_value_config.rs  handle_diacritics_config.rs  iso_country_sanitizer_config.rs  masking_config.rs  regex_replace_config.rs  rename_config.rs  safe_regex.rs  scd_type_2_config.rs
ETL/src/capabilities/logic/traits/: column_calculator.rs  masking.rs
ETL/src/domain/: mod.rs
ETL/src/domain/engine/: manifest.rs  mod.rs
ETL/src/domain/models/: manifest.rs  mod.rs  org_settings.rs  pipeline_config.rs  scheduled_event.rs
ETL/src/domain/traits/: onboarding_action.rs
ETL/src/orchestration/: factory.rs  mod.rs  pipeline_runner.rs
ETL/src/orchestration/clients/: mod.rs
ETL/tests/: test_e2e_benchmark.rs  test_e2e_pipeline.rs  test_identity_logic.rs  test_workday_connector.rs
ETL/tests/common/: mock_data.rs
lambdas/api/: Cargo.toml
lambdas/api/src/: dependancies.rs  main.rs
lambdas/api/src/controllers/: auth_controller.rs  config_controller.rs  csv_upload_controller.rs  mod.rs  settings_controller.rs
lambdas/api/src/engine/: auth_engine.rs  config_engine.rs  csv_upload_engine.rs  mod.rs  settings_engine.rs  validation_engine.rs
lambdas/api/src/models/: api_error.rs  app_state.rs  auth.rs  claims.rs  config_request.rs  config_validation.rs  csv_upload.rs  mod.rs  org_settings.rs  pipeline_config.rs  settings_request.rs
lambdas/api/src/repositories/: cognito_repository.rs  config_repository.rs  etl_repository.rs  mod.rs  s3_repository.rs  schedule_repository.rs  settings_repository.rs
lambdas/authorizer/: Cargo.toml
lambdas/authorizer/src/: dependancies.rs  main.rs
lambdas/authorizer/src/engine/: auth_engine.rs
lambdas/authorizer/src/models/: auth_config.rs  auth_event.rs  auth_response.rs  claims.rs  mod.rs
lambdas/authorizer/src/repositories/: jwks_repository.rs
lambdas/etl-trigger/: Cargo.toml
lambdas/etl-trigger/src/: dependancies.rs  main.rs
lambdas/etl-trigger/src/engine/: dynamic_api_engine.rs  mod.rs  pipeline_engine.rs
lambdas/etl-trigger/src/models/: mod.rs  openapi_dynamic_api_response.rs  pipeline_result.rs  schedule_event.rs
lambdas/etl-trigger/src/repositories/: config_repository.rs  etl_repository.rs  gh_models_repository.rs  mod.rs  openapi_repository.rs  pipeline_repository.rs  settings_repository.rs
onboard-you-backend/lambdas/authorizer/: Cargo.toml
onboard-you-backend/lambdas/authorizer/src/: dependancies.rs  main.rs
onboard-you-backend/lambdas/authorizer/src/engine/: mod.rs
onboard-you-backend/lambdas/authorizer/src/models/: auth_error.rs  auth_response.rs  mod.rs
onboard-you-backend/lambdas/email-ingestor/: Cargo.toml
onboard-you-backend/lambdas/email-ingestor/src/: dependancies.rs  main.rs
onboard-you-backend/lambdas/email-ingestor/src/engine/: email_engine.rs  filename.rs  mime_parser.rs  mod.rs  textract_engine.rs
onboard-you-backend/lambdas/email-ingestor/src/models/: email_route.rs  mod.rs  s3_event.rs
onboard-you-backend/lambdas/email-ingestor/src/repositories/: email_route_repository.rs  mod.rs  s3_repository.rs  sqs_repository.rs  textract_repository.rs
onboard-you-backend/lambdas/etl-trigger/: Cargo.toml
onboard-you-backend/lambdas/etl-trigger/src/: dependancies.rs  main.rs
onboard-you-backend/lambdas/etl-trigger/src/engine/: mod.rs  pipeline_engine.rs  plan_generation_engine.rs
onboard-you-backend/lambdas/etl-trigger/src/models/: input_event.rs  mod.rs  pipeline_result.rs
onboard-you-backend/lambdas/etl-trigger/src/repositories/: config_repository.rs  etl_repository.rs  llm_repository.rs  mod.rs  pipeline_repository.rs  run_log_repository.rs  schema_repository.rs  settings_repository.rs  validation_repository.rs
onboard-you-backend/mcp/: .env.example  Cargo.toml  sync-env.sh
onboard-you-backend/mcp/src/: api.rs  main.rs  server.rs
onboard-you-backend/mcp/src/models/: config.rs  schema.rs
onboard-you-backend/shared/ETL/: Cargo.toml  README.md
onboard-you-backend/shared/ETL/src/: lib.rs  main.rs
onboard-you-backend/shared/ETL/src/capabilities/: mod.rs
onboard-you-backend/shared/ETL/src/capabilities/conversion/: excel.rs  json_conv.rs  mod.rs  textract_parser.rs  xml_conv.rs
onboard-you-backend/shared/ETL/src/capabilities/egress/: api_dispatcher.rs  (+3 more)
onboard-you-backend/shared/ETL/src/orchestration/: factory.rs  mod.rs
onboard-you-backend/shared/ETL/tests/: test_e2e_benchmark.rs  test_identity_logic.rs  test_workday_connector.rs
onboard-you-backend/shared/ETL/tests/common/: mock_data.rs  mod.rs
onboard-you-backend/shared/models/: Cargo.toml
onboard-you-backend/shared/models/src/: lib.rs
onboard-you-backend/shared/models/src/models/: errors.rs  manifest.rs  mod.rs  org_settings.rs  pipeline_config.rs  plan_prompt.rs  plan_summary.rs  roster.rs  run_log.rs  scheduled_event.rs  schema_diff.rs
onboard-you-backend/shared/models/src/traits/: column_calculator.rs  dynamic_egress_model.rs  mod.rs  onboarding_action.rs  sql_row.rs
(+273 files in other folders)
