[workspace]
members = [
    "ETL",
    "lambdas/config-api",
    "lambdas/etl-trigger",
]
resolver = "2"

[workspace.dependencies]
# Shared across lambdas
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
lambda_runtime = "0.10"
lambda_http = "0.10"
aws-config = "1"
aws-sdk-dynamodb = "1"
aws-sdk-scheduler = "1"
chrono = "0.4"
thiserror = "1.0"
uuid = { version = "1", features = ["v4"] }
