[workspace]
members = [
    "onboard-you-backend/shared/ETL",
    "onboard-you-backend/lambdas/api",
    "onboard-you-backend/lambdas/etl-trigger",
    "onboard-you-backend/lambdas/authorizer", 
    "onboard-you-backend/shared/models",
    "onboard-you-backend/mcp",
]
resolver = "2"

[workspace.dependencies]
# Shared across lambdas
polars = { version = "0.53", features = ["lazy", "parquet", "csv", "strings", "dtype-struct"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
lambda_runtime = "0.10"
lambda_http = "0.10"
async-trait = "0.1"
aws-config = "1"
aws-sdk-cognitoidentityprovider = "1"
aws-sdk-eventbridge = "1"
aws-sdk-dynamodb = "1"
aws-sdk-s3 = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-scheduler = "1"
aws-sdk-sqs = "1"
serde_dynamo = { version = "4", features = ["aws-sdk-dynamodb+1"] }
chrono = "0.4"
thiserror = "1.0"
uuid = { version = "1", features = ["v4"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }
gh_models = { version = "0.2.0" }
regex = "1"
criterion = "0.5"
tempfile = "3"
macro_rules_attribute="0.2.2"
openssl = { version = "0.10", features = ["vendored"] }
insta = "1"