[package]
name = "onboard_you"
version = "0.1.0"
edition = "2021"

[dependencies]
# Data processing
polars = { version = "0.53", features = ["lazy", "parquet", "csv", "strings", "dtype-struct"] }

# Regex (safe — guarantees linear-time matching, no backtracking)
regex = "1"

# Error handling
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# OpenAPI schema generation
utoipa = "5"
serde_yaml = "0.9"

# HTTP client (Workday SOAP API) — uses rustls to avoid system OpenSSL dependency
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }

# AWS Lambda
lambda_runtime = "0.10"

# AWS S3 (CSV uploads)
aws-config = { workspace = true }
aws-sdk-s3 = { workspace = true }

# Utilities
async-trait = { workspace = true }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[features]
benchmark = []

[dev-dependencies]
# Testing utilities
criterion = "0.5"
tempfile = "3"
