[package]
name = "api"
version = "0.1.0"
edition = "2021"
description = "API Lambda: POST/PUT /{organizationId}/config → DynamoDB + EventBridge Scheduler"

[[bin]]
name = "bootstrap"
path = "src/main.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = { workspace = true }
lambda_http = { workspace = true }
aws-config = { workspace = true }
aws-sdk-dynamodb = { workspace = true }
aws-sdk-scheduler = { workspace = true }
serde_dynamo = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
