[package]
name = "api"
version = "0.1.0"
edition = "2021"
description = "API Lambda: POST/PUT /{organizationId}/config → DynamoDB + EventBridge Scheduler"

[[bin]]
name = "config-api"
path = "src/main.rs"

[dependencies]
onboard_you = { path = "../../ETL" }
polars = { version = "0.53", features = ["lazy"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = { workspace = true }
async-trait = { workspace = true }
lambda_http = { workspace = true }
aws-config = { workspace = true }
aws-sdk-cognitoidentityprovider = { workspace = true }
aws-sdk-dynamodb = { workspace = true }
aws-sdk-s3 = { workspace = true }
aws-sdk-scheduler = { workspace = true }
aws-sdk-eventbridge = { workspace = true } 
serde_dynamo = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }
tower-http = { workspace = true }
