[package]
name = "etl-trigger"
version = "0.1.0"
edition = "2021"
description = "ETL Trigger Lambda: Invoked by EventBridge Scheduler, reads config from DynamoDB, runs the pipeline"

[[bin]]
name = "bootstrap"
path = "src/main.rs"

[dependencies]
onboard_you = { path = "../../ETL" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
lambda_runtime = { workspace = true }
aws-config = { workspace = true }
aws-sdk-dynamodb = { workspace = true }
chrono = { workspace = true }
