[package]
name = "onboardyou-mcp"
version = "0.1.0"
edition = "2021"
description = "MCP server exposing OnboardYou pipeline config tools via stdio"

[[bin]]
name = "onboardyou-mcp"
path = "src/main.rs"

[dependencies]
rmcp = { version = "1", features = ["server", "transport-io"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = "0.15"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
onboard_you_models = { path = "../shared/models" }
utoipa = { workspace = true }
