[package]
name = "authorizer"
version = "0.1.0"
edition = "2021"
description = "Lambda Authorizer: validates Cognito JWTs and injects organizationId into the request context"

[[bin]]
name = "authorizer"
path = "src/main.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
lambda_runtime = { workspace = true }
async-trait = { workspace = true }
jsonwebtoken = "9"
reqwest = { workspace = true }
onboard_you_models = { path = "../../shared/models" }
