[package]
name = "etl-trigger"
version = "0.1.0"
edition = "2021"
description = "ETL Trigger Lambda: Invoked by EventBridge Scheduler, reads config from DynamoDB, runs the pipeline"

[[bin]]
name = "etl-trigger"
path = "src/main.rs"

[dependencies]
onboard_you_models = { path = "../../shared/models" }
onboard_you = { path = "../../shared/ETL" }
polars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
lambda_runtime = { workspace = true }
aws-config = { workspace = true }
aws-sdk-dynamodb = { workspace = true }
serde_dynamo = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
gh_models = { workspace = true }
openssl = { workspace = true }
# HTTP client used by the OpenAPI repository
reqwest = { workspace = true }

[dev-dependencies]
# lightweight HTTP server for testing network calls
mockito = "0.31"
