[package]
name = "onboard_you"
version = "0.1.0"
edition = "2021"

[dependencies]
# Data processing
polars = { workspace = true }

# Regex (safe — guarantees linear-time matching, no backtracking)
regex = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# OpenAPI schema generation
utoipa = { workspace = true }
serde_yaml =  { workspace = true }

# HTTP client (Workday SOAP API) — uses rustls to avoid system OpenSSL dependency
reqwest = { workspace = true }

# AWS Lambda
lambda_runtime = { workspace = true }

# AWS S3 (CSV uploads)
aws-config = { workspace = true }
aws-sdk-s3 = { workspace = true }

# Utilities
async-trait = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[features]
benchmark = []

[dev-dependencies]
# Testing utilities
criterion = { workspace = true }
tempfile = { workspace = true }
