[package]
name = "onboard_you_models"
version = "0.1.0"
edition = "2024"

[dependencies]

thiserror = { workspace = true }
polars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
utoipa = { workspace = true }
serde_yaml =  { workspace = true }
macro_rules_attribute.workspace = true
regex = { workspace = true }
tracing = { workspace = true }
paste = { workspace = true }
sqlx = { workspace = true }
